feat: Sistema biométrico completo con Flutter + Node.js - Captura de documentos y facial con ML Kit - Dashboard de tablets - Integración TTS y lector de huellas - Validación con Registraduría (modo MOCK) - Habeas Data y datos obligatorios (Celular, EPS, ARL)

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,15 @@ TERMINAL_IPS=192.168.1.201,192.168.1.202,192.168.1.208
 CALLBACK_BASE_URL=http://192.168.1.2:3000
 TERMINAL_BASE_URL=http://192.168.1.201:8090
 
+# Apitude API - Integración con Registraduría/ANI
+# Obtener API key en: https://apitude.co/es/contact/
+APITUDE_API_KEY=your_apitude_api_key_here
+
+# ElevenLabs TTS (Text-to-Speech) - OPCIONAL
+# Obtener API key en: https://elevenlabs.io/
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+ELEVENLABS_VOICE_ID=pNInz6obpgDQGcFmaJgB
+
 # Security
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
