--- a/changingbeat/docker-compose.yml
+++ b/changingbeat/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-examplepassword}
     volumes:
       - mongo-data:/data/db
+    networks:
+      - access-control-network
     deploy:
       replicas: 1
       restart_policy:
@@ -45,6 +47,8 @@ services:
     volumes:
       - app-uploads:/app/uploads
       - app-logs:/app/logs
+    networks:
+      - access-control-network
     deploy:
       replicas: 1
       restart_policy:
@@ -56,6 +60,11 @@ services:
         - "traefik.http.routers.access-control.tls=true"
         - "traefik.http.routers.access-control.tls.certresolver=letsencrypt"
         - "traefik.http.services.access-control.loadbalancer.server.port=3000"
+
+networks:
+  access-control-network:
+    driver: overlay
+    attachable: true
 
 volumes:
   mongo-data:
